tests/paczka1/fuzzy1/61108885.err
Error in line 7: c0nA A313 37,3
Error in line 12: 98onO0wd A313 74,9
Error in line 9: c0nA A24 40,6
